<resources>
    <string name="app_name">RiskHelp</string>
    <string name="emergency">Emergency</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log In</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="email_address">Email address</string>
    <string name="telephone">Telephone</string>
    <string name="password">Password</string>
    <string name="sign_up_user">You need to register first before you can start, so tell us about yourself!</string>
    <string name="next">Next</string>
    <string name="app_slogan">CONECT, WARN, HELP</string>
    <string name="log_in_message_user">"You're back! It's great to see you again! "</string>
    <string name="dialog_sign_up_message">Which type of user would you like to be?</string>
    <string name="postal_code">Postal Code</string>
    <string name="yes">Yes</string>
    <string name="no" translatable="false">No</string>
    <string name="emergency_message">You can use the emergency button to send an immediate alert.</string>
    <string name="sign_up_volunteer">Thank you for choosing RiskHelp to help the community! Sign up to get started</string>
    <string name="address">Address</string>
    <string name="volunteer_group">Volunteer Group</string>
    <string name="regular_user">Regular User</string>
    <string name="title_activity_principal" translatable="false">PrincipalActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_taken_alerts">Taken Alerts</string>
    <string name="menu_untaken_alerts">Untaken Alerts</string>

    <string name="home_second" translatable="false">Received Alerts</string>
    <string name="menu_my_profile">My Profile</string>
    <string name="log_out">Log Out</string>
    <string name="description">Description</string>
    <string name="log_in_message_volunteer">We\'re glad to see you again, thank you for your amazing job!</string>
    <string name="email_empty">The email field can\'t be empty</string>
    <string name="email_error">The email is incorrect</string>
    <string name="password_error">"The password field cannot be empty, or have less than 6 characters "</string>
    <string name="log_in_failure">The data entered was not correct, please check and try again</string>
    <string name="empty_field">The fields cannot be empty</string>
    <string name="sign_up_failure">"Your sign up has failed, please check your information and try again "</string>
    <string name="anonimous">Anonimous</string>
    <string name="new_alert">New Alert</string>
    <string name="new_alert_message">In order to help you we need more information, please fill in the fields below.</string>
    <string name="dialog_log_in_message">Which type of user are you?</string>
    <string name="my_profile_settings">To change the profile picture, or password, you must go to the settings at the top right.</string>
    <string name="select_volunteer_group">Select a volunteer group</string>
    <string name="new_alert_correct">The alert has been successfully created.</string>
    <string name="new_alert_error">The alert has not been created.</string>
    <string name="menu_alerts">Alerts</string>
    <string name="settings_message">Here you can change your password or profile image</string>
    <string name="change_password">Change password</string>
    <string name="change_profile_image">Change profile image</string>
    <string name="group_error">"We're sorry but there are no groups available in your area, we ask you to call the emergency numbers: 112 or 012 "</string>
    <string name="enter_new_password">Enter a new password</string>
    <string name="back_button">To exit press the back button</string>
    <string name="Profile_change">Profile picture changed succesfully!</string>
    <string name="sign_up_correct">Sign up has been successful.</string>
    <string name="sign_up_incorrect">Sign up not successful.</string>


</resources>
