<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group_usuarios"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_alertas"
            android:fontFamily="sans-serif-smallcaps"
            android:icon="@drawable/ic_reports"
            android:title="@string/menu_alerts" />
        <item
            android:id="@+id/nav_alertas_tomadas"
            android:fontFamily="sans-serif-smallcaps"
            android:icon="@drawable/ic_received_reports"
            android:title="@string/menu_taken_alerts" />
        <item
            android:id="@+id/nav_alertas_no_tomadas"
            android:title="@string/menu_untaken_alerts" />
    </group>
    <group >
        <item
            android:id="@+id/nav_mi_perfil"
            android:fontFamily="sans-serif-smallcaps"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_my_profile" />
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/log_out" />
    </group>
</menu>
